// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptsUtils viewPromptDetails should display env variable correctly 1`] = `
"Prompt: Test Prompt

Full test description

Category: Test

Tags: tag1, tag2

Options: ([*] Required  [ ] Optional)
  --var1 [*] 
    test role
      Env: env_var_name (env-value)"
`;

exports[`PromptsUtils viewPromptDetails should display fragment variable correctly 1`] = `
"Prompt: Test Prompt

Full test description

Category: Test

Tags: tag1, tag2

Options: ([*] Required  [ ] Optional)"
`;

exports[`PromptsUtils viewPromptDetails should display prompt details correctly 1`] = `
"Prompt: Test Prompt

Full test description

Category: Test

Tags: tag1, tag2

Options: ([*] Required  [ ] Optional)
  --var1 [*] (Env variable available)
    test role
      Not Set (Required)
  --var2 [ ] 
    test role 2
      Not Set"
`;

exports[`PromptsUtils viewPromptDetails should display regular variable value correctly 1`] = `
"Prompt: Test Prompt

Full test description

Category: Test

Tags: tag1, tag2

Options: ([*] Required  [ ] Optional)"
`;

exports[`PromptsUtils viewPromptDetails should handle env vars fetch failure 1`] = `
"Prompt: Test Prompt

Full test description

Category: Test

Tags: tag1, tag2

Options: ([*] Required  [ ] Optional)
  --var1 [*] 
    test role
      Not Set (Required)
  --var2 [ ] 
    test role 2
      Not Set"
`;
